f.select_recurring :schedule in availabilities form haml

--- a/app/views/availabilities/_form.html.haml
+++ b/app/views/availabilities/_form.html.haml
@@ -3,4 +3,5 @@
   = f.date_field :start_time
   = f.label :end_time
   = f.date_field :end_time
+  = f.select_recurring :schedule
   = f.submit "Create", class: "btn btn-primary"
