format availability form just for now

--- a/app/views/availabilities/_form.html.haml
+++ b/app/views/availabilities/_form.html.haml
@@ -1,7 +1,19 @@
 = form_for @availability do |f|
-  = f.label :start_time
-  = f.date_field :start_time
-  = f.label :end_time
-  = f.date_field :end_time
-  = f.select_recurring :schedule
-  = f.submit "Create", class: "btn btn-primary"
+  .row
+    .form-group
+      = f.label :start_time
+      .input-group
+        = f.datetime_select :start_time
+  .row
+    .form-group
+      = f.label :end_time
+      .input-group
+        = f.datetime_select :end_time
+  .row
+    .form-group
+      = f.label :schedule, "Set recurring .."
+      .input-group
+        = f.select_recurring :schedule
+  .row
+    .input-group
+      = f.submit "Create", class: "btn btn-primary"
