--- a/app/views/availabilities/show.html.haml
+++ b/app/views/availabilities/show.html.haml
@@ -1,3 +1,3 @@
 %p= @availability.description
 - @availability.schedule.occurrences(Date.today + 30.days).each do |t|
-  %p= t.start_time
+  %p= "#{t.start_time.strftime('%A, %B %e, %Y - %l:%M %p')} to #{t.end_time.strftime('%A, %B %e, %Y - %l:%M %p')}"
