require fullcalendar in css and js

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,7 +2,8 @@
 @import "overrides";
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import "errors";
 @import "dropdown";
+@import "errors";
 @import "extras";
+@import "fullcalendar";
 @import "recurring_select";
