add avail-calendar div to availabilities index

--- a/app/views/availabilities/index.html.haml
+++ b/app/views/availabilities/index.html.haml
@@ -2,3 +2,5 @@
 - @availabilities.each do |a|
   %p= a.description
 = link_to "Create a New Availability", new_availability_path, class: "btn btn-success"
+
+#avail-calendar
