add class of avail-form to _form availability modal

--- a/app/views/availabilities/_form.html.haml
+++ b/app/views/availabilities/_form.html.haml
@@ -1,4 +1,4 @@
-#modal-window.modal.fade
+#modal-window.modal.fade.avail-form
   .modal-dialog
     .modal-content
       = form_for @availability, remote: true do |f|
