--- a/app/views/availabilities/_form.html.haml
+++ b/app/views/availabilities/_form.html.haml
@@ -12,40 +12,36 @@
             = @persisted ? "Edit Availability" : "New Availability"
         .modal-body
           - if current_user.admin?
-            .row
-              .form-group
-                = f.label :instructor_id, "Instructor"
-                .input-group
-                  = f.select :instructor_id, Instructor.active.collect { |i| [i.full_name, i.id] }
+            .form-group
+              = f.label :instructor_id, "Instructor"
+              .input-group
+                = f.select :instructor_id, Instructor.active.collect { |i| [i.full_name, i.id] }
           - else
             = f.hidden_field :instructor_id, value: current_user.id
-            
-          .row
-            .form-group
-              = f.label :start_time
-              .input-group
-                = f.datetime_select :start_time, ampm: true, minute_step: 15
-          .row
-            .form-group
-              = f.label :end_time
-              .input-group
-                = f.datetime_select :end_time, ampm: true, minute_step: 15
-          .row
-            .form-group
-              = f.label :schedule, "Set recurring .."
-              .input-group
-                = f.select_recurring :schedule, nil, allow_blank: true
-          .row
-            .form-group
-              = f.label :number_of_occurrences, "End After"
-              .input-group
-                = f.number_field :number_of_occurrences
-                Occurrences
-                %br
-                %br
-                Or on this date:
-                = f.date_field :schedule_end_date, include_blank: true, start_year: Date.today.year
 
-          .row
+          .form-group
+            = f.label :start_time
             .input-group
-              = f.submit "Create", class: "btn btn-primary"
+              = f.datetime_select :start_time, ampm: true, minute_step: 1
+          .form-group
+            = f.label :end_time
+            .input-group
+              = f.datetime_select :end_time, ampm: true, minute_step: 1
+          .form-group
+            = f.label :schedule, "Set recurring .."
+            .input-group
+              = f.select_recurring :schedule, nil, allow_blank: true
+          .form-group
+            = f.label :number_of_occurrences, "End After:"
+            %br
+            %i leave these fields blank to repeat indefinitely.
+            .input-group
+              Occurrences
+              = f.number_field :number_of_occurrences
+          .form-group
+            = f.label :schedule_end_date, class: "sr-only"
+            .input-group
+              Or on date:
+              = f.date_field :schedule_end_date, include_blank: true, start_year: Date.today.year
+          .input-group
+            = f.submit "Create", class: "btn btn-primary"
